--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,16 @@
   <link href="./css/styles.css" rel="stylesheet">
 
 </head>
-<body class="font-open">
+<body class="font-open dark">
+
+  <!--Dark/Light Toggle-->
+  <div class="absolute top-1 left-5 cursor-pointer text-lg">
+    <i class="fa-solid fa-sun text-white" id="sun"></i>
+    <i class="fa-solid fa-moon text-black hidden" id="moon"></i>
+  </div>
 
   <!--Header Section-->
-  <header class="bg-black py-6 lg:py-12 text-fe-grey uppercase">
+  <header class="dark:bg-black bg-white py-6 lg:py-12 dark:text-fe-grey text-black uppercase">
     <!--Header Container-->
     <div class="container flex items-center justify-between space-x-8 lg:space-x-16">
       <!--Logo-->
@@ -325,7 +331,7 @@
   </section>
 
   <!--Matrix Section-->
-  <section class="bg-fe-white mb-24">
+  <section class="bg-fe-white ">
     <!--Matrix section container-->
     <div class="container flex items-center justify-center relative pl-10 lg:pl-0">
       <!--Left Content-->
@@ -468,6 +474,39 @@
     </div>
   </section>
 
+  <!--Footer Section-->
+  <footer class="bg-black text-fe-grey">
+    <!--Footer Container-->
+    <div class="container flex flex-col md:flex-row px-10 lg:px-0 pb-8">
+      <!--Left-->
+      <div class="basis-1/3">
+      <a href="#" class="text-2xl lg:text-3xl font-bold text-transparent bg-gradient-to-r bg-clip-text from-fe-red to-fe-grey">bahadır</a>
+        <p class="text-sm mt-2">2024 Fellows No &copy; COPYRIGHT</p>
+      </div>
+      <!--Middle-->
+      <div class="basis-1/3">
+        <h2 class="mb-2 text-fe-red">LINKS</h2>
+        <div class="grid grid-cols-5 gap-2 uppercase">
+          <a class="col-span-2 hover:text-fe-melon duration-500" href="#">Movies</a>
+          <a class="col-span-2 hover:text-fe-melon duration-500" href="#">Celebrities</a>
+          <a class="col-span-2 hover:text-fe-melon duration-500" href="#">Blog</a>
+          <a class="col-span-2 hover:text-fe-melon duration-500" href="#">News</a>
+          <a class="col-span-2 hover:text-fe-melon duration-500" href="#">About</a>
+        </div>
+      </div>
+      <!--Right-->
+      <div class="basis-1/3">
+        <h2 class="mb-2 text-fe-red">FOLLOWS US</h2>
+        <form action="" class="flex">
+          <input class="py-1 px-2 bg-transparent border border-fe-red placeholder:text-xs outline-none"
+           placeholder="Type Your Email" type="text">
+          <button
+           class="py-1 px-2 border border-fe-red bg-fe-red font-gemunu uppercase">Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </footer>
 
+<script src="./js/script.js"></script>
 </body>
 </html>
